syntax = "proto3";

package proto;

option go_package = "github.com/tanmaytare/gopherdrive/proto";


service MetadataService {
  rpc RegisterFile (RegisterRequest) returns (RegisterResponse);
  rpc UpdateStatus (UpdateRequest) returns (UpdateResponse);
  rpc GetFile (GetRequest) returns (GetResponse);
}

message RegisterRequest {
  string id = 1;
  string path = 2;
  int64 size = 3;
}

message RegisterResponse {}

message UpdateRequest {
  string id = 1;
  string hash = 2;
  string status = 3;
}

message UpdateResponse {}

message GetRequest {
  string id = 1;
}

message GetResponse {
  string id = 1;
  string path = 2;
  string hash = 3;
  int64 size = 4;
  string status = 5;
}
